--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -2,6 +2,8 @@
 @import '../styles/mixins.scss';
 
 #navbar {
+    visibility: hidden;
+
     .main-nav {
         ul {
             height: 70px;
