--- a/src/components/TitleBlock.scss
+++ b/src/components/TitleBlock.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    visibility: hidden;
 
     .title-name {
         color: $color-primary;
